<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lailathenovell.meerath.info"
    android:background="@drawable/info_bgg">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:weightSum="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/info_1_nobg"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nmerge_nobg"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linInfoFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout">
        <TextView
            android:text="@string/txtInfo"
            style="@style/txtViewStyleBig"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:drawablePadding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_below="@id/linInfoFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/_16sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/info_layer"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingStart="90dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/imgFacebook"
                    android:src="@drawable/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/facebook"
                    android:layout_marginEnd="8dp" />

                <ImageView
                    android:id="@+id/imgInstagram"
                    android:src="@drawable/instagram_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/youtube"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:id="@+id/imgYoutube"
                    android:src="@drawable/icon_yt_nobg"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:contentDescription="@string/youtube"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:id="@+id/imgWebsite"
                    android:src="@drawable/ic_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/youtube"/>
            </LinearLayout>


        </FrameLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>